--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ python = "^3.10"
 slack-bolt = "^1.11.6"
 omegaconf = "^2.1.1"
 pydantic = "^1.9.0"
-py-cord = {git = "https://github.com/Pycord-Development/pycord.git", rev = "v2.0.0-beta.5"}
+py-cord = "2.0.0-beta.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
