--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ slack-bolt = "^1.11.6"
 omegaconf = "^2.1.1"
 pydantic = "^1.9.0"
 py-cord = "2.0.0-beta.5"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
