--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,9 @@ nox = "^2022.1.7"
 pytest = "^7.0.1"
 types-PyYAML = "^6.0.4"
 
+[tool.poetry.group.dev.dependencies]
+types-requests = "^2.28.11"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
